--- a/SKB Master/App.config
+++ b/SKB Master/App.config
@@ -1,24 +1,58 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SKB_Master.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-    <userSettings>
-        <SKB_Master.Properties.Settings>
-            <setting name="username" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="password" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="passwordEntropy" serializeAs="String">
-                <value />
-            </setting>
-        </SKB_Master.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SKB_Master.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SKB_Master.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <userSettings>
+    <SKB_Master.Properties.Settings>
+      <setting name="username" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="showAdvanced" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="estimatedInterestMultiplier" serializeAs="String">
+        <value>0.01187</value>
+      </setting>
+    </SKB_Master.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <SKB_Master.Properties.Settings>
+      <setting name="logFileLocation" serializeAs="String">
+        <value>%USERPROFILE%\AppData\Local\SKB_Master\</value>
+      </setting>
+      <setting name="offersFileLocation" serializeAs="String">
+        <value>%USERPROFILE%\AppData\Local\SKB_Master\</value>
+      </setting>
+      <setting name="DEBUG" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="loginUrl" serializeAs="String">
+        <value>https://www.skb.org/login/</value>
+      </setting>
+      <setting name="loginSuccessfulUrl" serializeAs="String">
+        <value>https://www.skb.org/mina-sidor/</value>
+      </setting>
+      <setting name="loginFailedUrl" serializeAs="String">
+        <value>https://www.skb.org/login/?err=login</value>
+      </setting>
+      <setting name="queuePlacingsUrl" serializeAs="String">
+        <value>https://www.skb.org/mina-sidor/mina-intresseanmalningar/mina-kallelser/</value>
+      </setting>
+      <setting name="scrapeUpdateMillisecondInterval" serializeAs="String">
+        <value>600000</value>
+      </setting>
+    </SKB_Master.Properties.Settings>
+  </applicationSettings>
 </configuration>
